[gd_scene load_steps=13 format=3 uid="uid://b3qvxkwkl4p4b"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_0hdxr"]
[ext_resource type="Material" path="res://materials/PlayerMaterial.tres" id="2_1hjxk"]
[ext_resource type="Material" path="res://materials/PlatformMaterial.tres" id="3_2hjxk"]
[ext_resource type="Material" path="res://materials/GoalMaterial.tres" id="4_3hjxk"]
[ext_resource type="Environment" path="res://environments/GalaxyEnvironment.tres" id="5_4hjxk"]
[ext_resource type="Script" path="res://scripts/LevelGoal.gd" id="6_goal"]
[ext_resource type="Script" path="res://scripts/DeathZone.gd" id="7_death"]
[ext_resource type="PackedScene" path="res://ui/NuclearHUD.tscn" id="8_nuclear_hud"]
[ext_resource type="PackedScene" path="res://scenes/Starfield.tscn" id="9_starfield"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_player"]
radius = 0.5
height = 2.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_player"]
radius = 0.5
height = 2.0

[sub_resource type="BoxMesh" id="BoxMesh_platform"]
size = Vector3(12, 2, 12)

[sub_resource type="BoxShape3D" id="BoxShape3D_platform"]
size = Vector3(12, 2, 12)

[sub_resource type="SphereMesh" id="SphereMesh_goal"]
radius = 1.5
height = 3.0

[sub_resource type="SphereShape3D" id="SphereShape3D_goal"]
radius = 1.5

[node name="Level1" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("5_4hjxk")

[node name="Starfield" parent="." instance=ExtResource("9_starfield")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 20, 0)
light_energy = 2.0
light_indirect_energy = 1.0
shadow_enabled = true

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
collision_layer = 2
collision_mask = 1
script = ExtResource("1_0hdxr")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player"]
mesh = SubResource("CapsuleMesh_player")
surface_material_override/0 = ExtResource("2_1hjxk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("CapsuleShape3D_player")

[node name="CameraController" type="Node3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 1.5, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="Player/CameraController"]
spring_length = 6.0
collision_mask = 1

[node name="Camera3D" type="Camera3D" parent="Player/CameraController/SpringArm3D"]
fov = 75.0

[node name="DashParticles" type="GPUParticles3D" parent="Player"]
emitting = false
amount = 100

[node name="JumpParticles" type="GPUParticles3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
emitting = false
amount = 50

[node name="LandingParticles" type="GPUParticles3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
emitting = false
amount = 30


[node name="Environment" type="Node3D" parent="."]

[node name="StartPlatform" type="StaticBody3D" parent="Environment"]
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/StartPlatform"]
mesh = SubResource("BoxMesh_platform")
surface_material_override/0 = ExtResource("3_2hjxk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/StartPlatform"]
shape = SubResource("BoxShape3D_platform")

[node name="Platform1" type="StaticBody3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 1, 0)
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Platform1"]
mesh = SubResource("BoxMesh_platform")
surface_material_override/0 = ExtResource("3_2hjxk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Platform1"]
shape = SubResource("BoxShape3D_platform")

[node name="Platform2" type="StaticBody3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 2, 0)
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Platform2"]
mesh = SubResource("BoxMesh_platform")
surface_material_override/0 = ExtResource("3_2hjxk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Platform2"]
shape = SubResource("BoxShape3D_platform")

[node name="GoalPlatform" type="StaticBody3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 3, 0)
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/GoalPlatform"]
mesh = SubResource("BoxMesh_platform")
surface_material_override/0 = ExtResource("3_2hjxk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/GoalPlatform"]
shape = SubResource("BoxShape3D_platform")

[node name="Goal" type="Area3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 6, 0)
collision_layer = 16
collision_mask = 2
script = ExtResource("6_goal")
next_level_number = 2
goal_message = "Tutorial Complete! Moving to Level 2..."

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Goal"]
mesh = SubResource("SphereMesh_goal")
surface_material_override/0 = ExtResource("4_3hjxk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Goal"]
shape = SubResource("SphereShape3D_goal")

[node name="OmniLight3D" type="OmniLight3D" parent="Environment/Goal"]
light_color = Color(1, 1, 0.2, 1)
light_energy = 3.0
omni_range = 15.0

[node name="DeathZone" type="Area3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -100, 0)
collision_layer = 32
collision_mask = 2
script = ExtResource("7_death")

[node name="NuclearHUD" parent="." instance=ExtResource("8_nuclear_hud")]